--- a/index-1.html
+++ b/index-1.html
@@ -87,7 +87,7 @@
     </header>
 
     <div class="profile-photo">
-        <img src="profile.jpg" alt="Your Profile Photo">
+        <img src="IMG-20250321-WA0005.jpg" alt="Your Profile Photo">
     </div>
 
     <nav>
